src/objects/LeanData__Round_Robin_Setting__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Cap__c</fullName>
        <label>Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Last_Reset__c</fullName>
        <label>Capping Last Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Limit_Override__c</fullName>
        <label>Capping Limit Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Current_Cap_Value__c</fullName>
        <label>Current Cap Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Grouping_Name__c</fullName>
        <label>Pool Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Grouping__c</fullName>
        <label>Round Robin Grouping Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Hours__c</fullName>
        <label>Hours</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Available_For_Routing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Available For Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__JSON_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capping Ruleset Configuration Setting</label>
        <referenceTo>LeanData__Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Ruleset Configuration for Pool</relationshipLabel>
        <relationshipName>CappingRulesetConfiguration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Member_Round_Robin_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Round Robin Setting</label>
        <referenceTo>LeanData__Round_Robin_Setting__c</referenceTo>
        <relationshipLabel>Member Round Robin Setting</relationshipLabel>
        <relationshipName>Member_Round_Robin_Setting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Owner_Order__c</fullName>
        <label>Owner Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Pool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round Robin Pool</label>
        <referenceTo>LeanData__Round_Robin_Pool__c</referenceTo>
        <relationshipLabel>Round Robin Pool</relationshipLabel>
        <relationshipName>RoundRobinPool</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Reset_Weighting_Pointer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Weighting Pointer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Available - Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_Step__c</fullName>
        <label>Time Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <label>Setting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__User_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Owner</relationshipLabel>
        <relationshipName>User_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Weighting_Next_Pointer__c</fullName>
        <label>Weighting Next Pointer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Weighting_Value__c</fullName>
        <label>Weighting Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Round Robin Setting</label>
    <nameField>
        <label>Round Robin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>